--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -2,5 +2,17 @@
     "name": "codespace for Skills!",
     "image": "mcr.microsoft.com/vscode/devcontainers/universal:latest",
     "remoteUser": "codespace",
-    "overrideCommand": false
+    "overrideCommand": false,
+    "customizations": {
+        "vscode": {
+            "extensions": [
+                "Github.copilot"
+            ]
+        },
+        "codespaces": {
+            "openFiles": [
+                "codespace.md"
+            ]
+        }
+    }
 }
